[gd_scene load_steps=4 format=2]

[ext_resource path="res://tilemap/room/room_tilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://valuables/room/room.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 48 )

[node name="room" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="room_tilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 4, 0, 1, 1, 0, 2, 2, 0, 3, 1, 0, 4, 15, 0, 65536, 5, 0, 65540, 14, 0, 131072, 536870926, 0, 131073, 21, 0, 131074, 21, 0, 131075, 21, 0, 131076, 13, 0, 196608, 18, 0, 196609, 16, 0, 196610, 17, 0, 196611, 19, 0, 196612, 10, 0 )

[node name="collision_check" type="Area2D" parent="."]
position = Vector2( 80, 64 )
collision_layer = 16
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_check"]
shape = SubResource( 1 )

[connection signal="body_entered" from="collision_check" to="." method="_on_collision_check_body_entered"]
[connection signal="body_exited" from="collision_check" to="." method="_on_collision_check_body_exited"]
